# tf_gpu_win10_env

./: README.md  Untitled.ipynb  pyproject.toml
