[tool.poetry]
name = "poetry_gpu_test"
version = "0.1.0"
description = ""
authors = ["ababa831"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.1.0"
jupyterlab = "^2.0.1"
matplotlib = "^3.2.1"
tensorflow-estimator = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
